All the old goes into proxima quarantine

--- a/_layouts/proxima/default.html
+++ b/_layouts/proxima/default.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
-	<link rel="stylesheet" href="/css/base.css" type="text/css" />
+	<link rel="stylesheet" href="/css/proxima.css" type="text/css" />
 	<link rel="alternate" href="http://warpspire.com/feed/" type="application/rss+xml" />
 </head>
 <body>
