--- a/_layouts/proxima/link.html
+++ b/_layouts/proxima/link.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: proxima/default
 ---
 <p class="date">{{ page.date | date: "%B %e, %Y" }}</p>
 <h1 class="link"><a href="{{ page.link }}">{{ page.title }}</a></h1>
