--- a/_layouts/proxima/post.html
+++ b/_layouts/proxima/post.html
@@ -1,6 +1,8 @@
 ---
-layout: default
+layout: proxima/default
 ---
+<p class="date">{{ page.date | date: "%B %e, %Y" }}</p>
+<h1 class="words">{{ page.title }}</h1>
 {{ content }}
 
 <div class="keep-in-touch">
