--- a/_layouts/proxima/talk.html
+++ b/_layouts/proxima/talk.html
@@ -1,12 +1,6 @@
 ---
-layout: default
+layout: proxima/default
 ---
-<h1 class="book"><a href="{{ page.link }}">{{ page.title }}</a></h1>
-<blockquote>
-  <p>{{ page.description }}</p>
-</blockquote>
-<hr />
-
 {{ content }}
 
 <div class="keep-in-touch">
