--- a/_layouts/proxima/book.html
+++ b/_layouts/proxima/book.html
@@ -1,8 +1,12 @@
 ---
-layout: default
+layout: proxima/default
 ---
-<p class="date">{{ page.date | date: "%B %e, %Y" }}</p>
-<h1 class="words">{{ page.title }}</h1>
+<h1 class="book"><a href="{{ page.link }}">{{ page.title }}</a></h1>
+<blockquote>
+  <p>{{ page.description }}</p>
+</blockquote>
+<hr />
+
 {{ content }}
 
 <div class="keep-in-touch">
