--- a/_layouts/phasetwo/default.html
+++ b/_layouts/phasetwo/default.html
@@ -13,7 +13,8 @@
 
 	<link rel="stylesheet" href="/css/phasetwo.css" type="text/css" />
 	<link rel="alternate" href="http://warpspire.com/feed/" type="application/rss+xml" />
-	<link href="https://fonts.googleapis.com/css2?family=Halant:wght@600&family=Nunito+Sans:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Halant:wght@400;600&family=Nunito+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
