--- a/css/phasetwo.css
+++ b/css/phasetwo.css
@@ -55,15 +55,17 @@ body {
   background: #FFFFFF;
   color: #333333;
   font-family: 'Nunito Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Source Code Pro', monospace;
   font-weight: 400;
   font-size: 19px;
-  line-height: 1.3;
-  padding: 50px 100px;
+  line-height: 1.35;
+  padding: 10px 50px 50px;
 }
 
 h1, h2 {
-  font-family: 'Halant', serif;
   color: #000000;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 800;
 }
 
 .container {
@@ -72,9 +74,8 @@ h1, h2 {
 }
 
 h1.title {
-  margin: 0 0 0.5em 0;
-  font-size: 35px;
-  font-weight: 600;
+  margin: 0 0 1em 0;
+  font-size: 36px;
 }
 
 h1.title + p {
@@ -109,30 +110,54 @@ a {
 }
 
 ul {
-  margin: 1em 0 1em 2em;
-  list-style-type: disc;
+  margin: 1em 0 1em 1em;
+  list-style-type: none;
+}
+ul>li:before {
+  color: #cccccc;
+  content: '-    ';
 }
 
 hr {
-  margin: 20px 0 25px 0;
+  margin: 30px 0 35px 0;
   text-align: center;
   letter-spacing: 3px;
-  font-size: 20px;
-  color: #ddd;
+  font-size: 19px;
+  color: #cccccc;
   border: none;
 }
 hr:before {
-  content: '\2022 \2022 \2022 \2022 \2022';
+  content: '* * * * * *';
 }
 
 blockquote {
-  margin: 1.0em 0;
+  margin: 1em 0 1em 0;
   padding: 0 0 0 15px;
-  font-family: 'Halant', serif;
   font-style: italic;
-  border-left: 2px solid #aaa;
+  border-left: 2px solid #ccc;
 }
 blockquote p {
   margin: 12px 0;
   color: #999;
+}
+
+header {
+  margin: 0 0 40px;
+  padding: 10px 0 30px;
+  text-align: center;
+  border-bottom: 1px solid #DDD;
+}
+
+header a.logo {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-decoration: none;
+  color: #000;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 900;
+  font-size: 15px;
+  border: 1px solid #000;
+  border-radius: 50px;
 }
