--- a/css/phasetwo.css
+++ b/css/phasetwo.css
@@ -61,6 +61,11 @@ body {
   line-height: 1.35;
   padding: 10px 50px 50px;
 }
+@media only screen and (max-width: 520px) {
+  body {
+    padding: 10px 20px 30px;
+  }
+}
 
 h1, h2 {
   color: #000000;
@@ -111,12 +116,17 @@ a {
 }
 
 ul {
-  margin: 1em 0 1em 1em;
+  margin: 1em 0 1em 1.5em;
   list-style-type: none;
 }
+ul>li {
+
+}
 ul>li:before {
+  display: inline-block;
   color: #cccccc;
-  content: '-    ';
+  content: '-';
+  text-indent: -20px;
 }
 
 hr {
@@ -185,6 +195,7 @@ ul.books>li {
   list-style-type: none;
 }
 ul.books>li:before {
+  display: none;
   content: ""
 }
 ul.books h3 {
@@ -209,6 +220,7 @@ ul.nonprofits>li {
   list-style-type: none;
 }
 ul.nonprofits>li:before {
+  display: none;
   content: ""
 }
 ul.nonprofits h3 {
