--- a/_layouts/proxima/default.html
+++ b/_layouts/proxima/default.html
@@ -31,17 +31,19 @@
     {{ content }}
   </div><!-- /.main -->
 
-  <script type="text/javascript">
-  ;(function() {
-  var t = document.createElement("script")
-  t.type = "text/javascript"
-  t.async = true
-  t.id = "gauges-tracker"
-  t.setAttribute("data-site-id", "4dd8683cf5a1f53796000001")
-  t.src = "//secure.gaug.es/track.js"
-  var s = document.getElementsByTagName("script")[0]
-  s.parentNode.insertBefore(t, s)
-})()
-</script>
+	<script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id', '4dd8683cf5a1f53796000001');
+    t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+    t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+	</script>
 </body>
 </html>
