--- a/_layouts/phasetwo/default.html
+++ b/_layouts/phasetwo/default.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<link rel="stylesheet" href="/css/phasetwo.css" type="text/css" />
+	<link rel="stylesheet" href="/css/phasetwo.css?v2" type="text/css" />
 	<link rel="alternate" href="http://warpspire.com/feed/" type="application/rss+xml" />
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@;0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
