--- a/_layouts/phasetwo/default.html
+++ b/_layouts/phasetwo/default.html
@@ -11,9 +11,11 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<link rel="stylesheet" href="/css/phasetwo.css?v2" type="text/css" />
+	<link rel="stylesheet" href="/css/phasetwo.css?v3" type="text/css" />
 	<link rel="alternate" href="http://warpspire.com/feed/" type="application/rss+xml" />
-	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@;0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
 </head>
 <body>
 
