--- a/css/phasetwo.css
+++ b/css/phasetwo.css
@@ -31,9 +31,6 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
-ol, ul {
-	list-style: none;
-}
 blockquote, q {
 	quotes: none;
 }
@@ -55,10 +52,9 @@ body {
   background: #FFFFFF;
   color: #333333;
   font-family: 'Nunito Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-family: 'Source Code Pro', monospace;
   font-weight: 400;
-  font-size: 19px;
-  line-height: 1.35;
+  font-size: 20px;
+  line-height: 1.4;
   padding: 10px 50px 50px;
 }
 @media only screen and (max-width: 520px) {
@@ -80,7 +76,7 @@ h1, h2 {
 
 h1.title {
   margin: 0 0 0.75em 0;
-  font-size: 36px;
+  font-size: 42px;
 }
 
 h1.title + p {
@@ -94,9 +90,8 @@ p.date {
 }
 
 h2 {
-  margin: 2em 0 0.5em;
-  font-size: 18px;
-  text-transform: uppercase;
+  margin: 3em 0 0.5em;
+  font-size: 20px;
 }
 
 p {
@@ -113,6 +108,13 @@ strong {
 
 a {
   color: #4A90E2
+}
+
+ol {
+  margin: 1em 0 1em 1.5em;
+}
+ol>li {
+  margin: 1em 0 0 0;
 }
 
 ul {
