Show the right posts per site version automatically

--- a/_layouts/proxima/default.html
+++ b/_layouts/proxima/default.html
@@ -22,7 +22,7 @@
       <ul class="nav">
         <li><a href="/about">About</a></li>
 				<li><a href="/projects">Projects</a></li>
-        <li class="logo"><a href="/">w</a></li>
+        <li class="logo"><a href="/proxima">w</a></li>
 				<li><a href="/opinion">Opinion</a></li>
         <li><a href="/talks">Talks</a></li>
       </ul>
