--- a/css/phasetwo.css
+++ b/css/phasetwo.css
@@ -322,3 +322,26 @@ code{
   code.html span.doctype {
     color: #D7FF80;
   }
+  
+  table {
+    width: 100%;
+    border-top: 1px solid #CCCCCC;
+    border-bottom: 2px solid #CCC;
+    color: #000;
+    background: #fff;
+    border-collapse: separate;
+    font-size: 16px;
+  }
+  
+  th {
+    text-align: center;
+    padding: 5px;
+  }
+  
+  td {
+    text-align: left;
+    padding: 5px 8px;
+  }
+  tr:nth-child(odd) td {
+    background: #F5F5F5;
+  }
