Rough out the colored shapes

--- a/_layouts/phasetwo/default.html
+++ b/_layouts/phasetwo/default.html
@@ -15,16 +15,19 @@
 	<link rel="alternate" href="http://warpspire.com/feed/" type="application/rss+xml" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;1,200,0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
 </head>
 <body>
 
 	<header>
-		<a href="/" class="logo">W</a>
+		<div class="shape"></div>
 	</header>
   <div class="container">
     {{ content }}
   </div><!-- /.main -->
+	<footer>
+		<div class="shape"></div>
+	</footer>
 
 	<script type="text/javascript">
   var _gauges = _gauges || [];
