Pull in the footer

--- a/_layouts/phasetwo/default.html
+++ b/_layouts/phasetwo/default.html
@@ -15,7 +15,7 @@
 	<link rel="alternate" href="http://warpspire.com/feed/" type="application/rss+xml" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;1,200,0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;1,200,0,400;0,400;1,600;0,600;1,700;0,700;1,800;0&display=swap" rel="stylesheet"> 
 </head>
 <body>
 
@@ -26,6 +26,7 @@
     {{ content }}
   </div><!-- /.main -->
 	<footer>
+		<p class="tagline"><span class="inner">Est. 2003  •  Do Hard Things  •  Build. Learn. Invest. Explore.</span></p>
 		<div class="shape"></div>
 	</footer>
 
