--- a/css/phasetwo.css
+++ b/css/phasetwo.css
@@ -409,8 +409,8 @@ nav li:first-child a:hover {
 footer {
   position: relative;
   overflow: hidden;
-  height: 1000px;
-  margin-top: -900px;
+  height: 10000px;
+  margin-top: -9900px;
   z-index: 3;
 }
 footer p.tagline {
@@ -433,10 +433,10 @@ footer p.tagline .inner {
 footer .shape {
   z-index: 0;
   position: absolute;
-  bottom: -1000px;
-  left: -100%;
-  width: 200%;
-  height: 1000px;
+  bottom: -10000px;
+  left: -900%;
+  width: 1000%;
+  height: 10000px;
   background: rgb(71, 118, 171);
   transform-origin: top right;
   transform: rotate(30deg);
@@ -482,7 +482,9 @@ footer .shape {
 
 
 .homepage .latest h1 {
-  margin-top: 1em;
+  margin-top: 0;
+  margin-bottom: -0.5em;
+  font-size: 32px;
 }
 .homepage .latest h1 a {
   color: rgb(0, 0, 0);
@@ -506,7 +508,7 @@ footer .shape {
   border-top: 1px solid rgba(0, 0, 0, 0.15);
 }
 
-.mini-archive .date {
+.latest .date, .mini-archive .date {
   margin: 2em 0 0 0;
   font-size: 14px;
   font-weight: bold;
@@ -518,19 +520,36 @@ footer .shape {
 }
 
 ul.books{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   margin-left: 0;
+  margin-top: 2em;
 }
 ul.books>li {
-  margin: 1em 0;
+  flex: 0 0 auto;
+  flex-basis: 100%;
+  max-width: 23%;
+  padding-left: 2.5%;
+  margin: 0;
   list-style-type: none;
+}
+ul.books>li:first-child {
+  padding-left: 0;
 }
 ul.books>li:before {
   display: none;
   content: ""
 }
+ul.books img {
+  width: 97%;
+  padding: 1.5%;
+  box-shadow: -1px -1px 0 rgba(0, 0, 0, 0.1), 4px 4px 0 rgba(0, 0, 0, 0.05), 1px 1px 0 rgba(0, 0, 0, 0.1);
+}
 ul.books h3 {
   margin: 0;
-  font-weight: normal;
+  font-size: 13px;
+  font-weight: 700;
   text-decoration: underline;
 }
 ul.books h3 a {
@@ -538,6 +557,7 @@ ul.books h3 a {
 }
 ul.books p.author {
   margin: 0;
+  font-size: 12px;
   font-style: italic;
 }
 
