Found another old name

--- a/_layouts/phasetwo/default.html
+++ b/_layouts/phasetwo/default.html
@@ -3,7 +3,7 @@
 <head>
 	<title>
 	  {% if page.title %}
-	    {{ page.title }} &middot; by Kyle Neath
+	    {{ page.title }} &middot; by Kyle Aster
 	  {% else %}
 	    Warpspire: Fragments toward a more resilient future
 	  {% endif %}
