--- a/_layouts/phasetwo/default.html
+++ b/_layouts/phasetwo/default.html
@@ -9,7 +9,7 @@
 	  {% endif %}
 	</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -24,6 +24,9 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;1,200,0,400;0,400;1,600;0,600;1,700;0,700;1,800;0&display=swap" rel="stylesheet"> 
+	
+	<script src="https://cdn.usefathom.com/script.js" data-site="ASWRNHKL" defer></script>
+	
 </head>
 <body>
 	<div class="logo-wrap">
@@ -76,20 +79,5 @@
 		<p class="tagline"><span class="inner">Est. 2003 &nbsp;•&nbsp;  Do Hard Things  &nbsp;•&nbsp;  Build. Learn. Invest. Explore.</span></p>
 		<div class="shape"></div>
 	</footer>
-
-	<script type="text/javascript">
-  var _gauges = _gauges || [];
-  (function() {
-    var t   = document.createElement('script');
-    t.type  = 'text/javascript';
-    t.async = true;
-    t.id    = 'gauges-tracker';
-    t.setAttribute('data-site-id', '4dd8683cf5a1f53796000001');
-    t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
-    t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(t, s);
-  })();
-	</script>
 </body>
 </html>
