--- a/_layouts/proxima/default.html
+++ b/_layouts/proxima/default.html
@@ -14,6 +14,8 @@
 	<script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 	<link rel="stylesheet" href="/css/proxima.css" type="text/css" />
 	<link rel="alternate" href="http://warpspire.com/feed/" type="application/rss+xml" />
+  
+  <script src="https://cdn.usefathom.com/script.js" data-site="ASWRNHKL" defer></script>
 </head>
 <body>
 
@@ -30,20 +32,5 @@
 
     {{ content }}
   </div><!-- /.main -->
-
-	<script type="text/javascript">
-  var _gauges = _gauges || [];
-  (function() {
-    var t   = document.createElement('script');
-    t.type  = 'text/javascript';
-    t.async = true;
-    t.id    = 'gauges-tracker';
-    t.setAttribute('data-site-id', '4dd8683cf5a1f53796000001');
-    t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
-    t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(t, s);
-  })();
-	</script>
 </body>
 </html>
