I guess this has just been broken?

--- a/_layouts/phasetwo/default.html
+++ b/_layouts/phasetwo/default.html
@@ -21,9 +21,10 @@
 
 	<link rel="stylesheet" href="/css/phasetwo.css?v8" type="text/css" />
 	<link rel="alternate" href="http://warpspire.com/feed/" type="application/rss+xml" />
+	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;1,200,0,400;0,400;1,600;0,600;1,700;0,700;1,800;0&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,400;0,600;0,700;0,800;1,200;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
 	
 	<script src="https://cdn.usefathom.com/script.js" data-site="ASWRNHKL" defer></script>
 	
