This was always a bad idea, and you knew it

--- a/css/phasetwo.css
+++ b/css/phasetwo.css
@@ -132,8 +132,10 @@ p {
 }
 
 em {
-  padding: 0 5px;
   font-style: italic;
+}
+em.highlight {
+  padding: 0 5px;
   background: rgba(229, 189, 94, 0.3);
   border-radius: 2px;
 }
