--- a/_layouts/phasetwo/default.html
+++ b/_layouts/phasetwo/default.html
@@ -77,7 +77,7 @@
     {{ content }}
   </div><!-- /.main -->
 	<footer>
-		<p class="tagline"><span class="inner">Est. 2003 &nbsp;•&nbsp;  Do Hard Things  &nbsp;•&nbsp;  Build. Learn. Invest. Explore.</span></p>
+		<p class="tagline"><span class="inner">Est. 2003 &nbsp;•&nbsp;  Do Hard Things  &nbsp;•&nbsp;  Build. Learn. Explore.</span></p>
 		<div class="shape"></div>
 	</footer>
 </body>
