Good bye weird angles, I don't like you any longer

--- a/_layouts/phasetwo/default.html
+++ b/_layouts/phasetwo/default.html
@@ -63,7 +63,7 @@
 	</div>
 	<header>
 		<nav>
-			<span class="bar"></span>
+			<!-- <span class="bar"></span> -->
 			<ul class="nav">
 				<li><a href="/now">Now</a></li>
 				<li><a href="/giving">Giving</a></li>
@@ -77,7 +77,7 @@
     {{ content }}
   </div><!-- /.main -->
 	<footer>
-		<p class="tagline"><span class="inner">Est. 2003 &nbsp;•&nbsp;  Do Hard Things  &nbsp;•&nbsp;  Build. Learn. Explore.</span></p>
+		<p class="tagline"><span class="inner">Est. 2003 &nbsp;•&nbsp;  Do Hard Things  &nbsp;•&nbsp;  <span title="Finance isn't real. Do something real.">Build. Learn. Explore.</span></span></p>
 		<div class="shape"></div>
 	</footer>
 </body>
